Fixed hero dot styling
The hero dot had its position set to fixed instead of absolute, and it was overflowing
the body.

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -51,6 +51,11 @@ button {
   font: inherit;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--color-body-bg);
   font-family: var(--ff-body);
